--- a/limine.cfg
+++ b/limine.cfg
@@ -10,7 +10,7 @@ TIMEOUT=3
     KERNEL_PATH=boot:///kernel.elf
 
 # Same thing, but without KASLR.
-:NiVi OS Barebones (KASLR off)
+:NiVi OS (KASLR off)
     PROTOCOL=limine
 
     # Disable KASLR (it is enabled by default for relocatable kernels)
